[package]
name = "ds18b20"
version = "0.2.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>", "Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/sjm42/ds18b20"
keywords = [
    "onewire",
    "embedded-hal-driver",
    "ds18b20",
    "temperature",
    "sensor",
]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust DS18B20 temperature sensor driver for [embedded-hal](https://github.com/rust-embedded/embedded-hal)
"""

[dependencies]
one-wire-bus = { git = "https://github.com/sjm42/one-wire-bus" }
embedded-hal = { version = "1" }
